--- a/resume/cv-template/index.html
+++ b/resume/cv-template/index.html
@@ -49,7 +49,7 @@
                     <li>
                         <label class="left-label">邮箱</label><span class="label-value">mrzhang1515@gmail.com</span></li>
                     <li>
-                        <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
+                        <label class="left-label">个人主页</label><span class="label-value">mrjeffreymarshall.blogspot.com</span></li>
                     <li>
                         <label class="left-label">Github</label><span class="label-value">github.com/cohaesio</span></li>
                 </ul>
@@ -170,29 +170,37 @@
                         </p>
                     </li>
                     <li>
+                        <h3>基于脉冲神经网络的心率预测</h3>
+                        <p align="right">
+                          中国科学院计算机网络信息中心
+                        </p>
+                        <p>
+                          * 了解脉冲神经网络的结构和模拟器实现原理
+                        </p>
+                        <p>
+                          * 利用脉冲神经网络模拟器 CARLsim 实现液态机模型，从编码好的心跳脉冲序列中提取特征序列并输出到分类模型进行预测。
+                        </p>
+                    </li>
+                    <li>
                         <h3>数字视网膜仿真</h3>
-
                         <p align="right">
                           北京大学数字视频编解码技术国家工程实验室
                         </p>
-                    </li>
-                    <li>
-                        <h3>基于脉冲神经网络的心率预测</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                          * 熟悉灵长类视网膜生物结构，利用非负矩阵分解结合深度学习模型对视网膜层次结构进行模拟
                         </p>
-                    </li>
-                    <li>
-                        <h3>数字视网膜仿真</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                          * 阅读视觉编解码相关前沿论文，了解通过脉冲编码、无帧编码的方法对图像视频进行重构
                         </p>
                     </li>
                     <li>
                         <h3>“人工智能与大数据”暑期学校项目</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <p align="right">
+                          Sidney Sussex College, Cambridge University(剑桥大学悉尼·苏塞克斯学院)
                         </p>
+                        <p>* 参加“认知科学与人工智能”、“Facebook用户个性分析”等课程；</p>
+                        <p>* 调研了NHS最新AI诊疗系统, 医疗影像发展应用等；</p>
+                        <p>* 进行关于”AI在医疗诊疗领域应用”的主题演讲答辩。</p>
                     </li>
                 </ul>
             </div>
@@ -202,29 +210,10 @@
                 <ul class="experience-list">
                     <li>
                         <h3>钢琴十级</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
                     </li>
                     <li>
-                        <h3>曾获统一冰红茶“再来一瓶”奖</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
+                      <h3>骑行，国际象棋，排球，书法</h3>
                     </li>
-                    <li>
-                        <h3>这一行也是为了凑版面</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
-                    </li>
-            </div>
-            <div class="aboutme info-unit right-paragraph">
-                <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
-                <hr>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
             </div>
         </div>
     </div>
