--- a/resume/index.html
+++ b/resume/index.html
@@ -15,9 +15,7 @@
 <body>
     <div class="container" id="cv">
         <div class="side">
-            <div class="me">
-                <div class="portrait"></div>
-                
+            <div class="me">                
                 <h1 id="username" >张明睿</h1>
                 <h4 id="persona-tag" >计算机视觉 / 脑机接口 / 机器学习</h4>
             </div>
@@ -58,11 +56,11 @@
                         <progress value="80" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">html/css</label>
+                        <label class="left-label">C/C++</label>
                         <progress value="70" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">Javascript</label>
+                        <label class="left-label">html/css/Javascript</label>
                         <progress value="60" max="100"></progress>
                     </li>
                     <li>
@@ -81,9 +79,6 @@
                     <li>
                         <label class="left-label">后端</label><span class="label-value">Flask、Django、Twisted、Node.js、MongoDB、MySQL、Redis</span></li>
                     </li>
-                    <li>
-                        <label class="left-label">其它</label><span class="label-value">我全都是瞎写的。</span></li>
-                    </li>
                 </ul>
             </div>
 
@@ -91,8 +86,7 @@
                 <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">个人微信</span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="static/image/weixin.png" alt="">
-
+                    <img src="static/image/wechat.png" alt="">
                 </div>
             </div>
             <div class="remodal remodal-img" data-remodal-id="weixin-modal">
