--- a/resume/index.html
+++ b/resume/index.html
@@ -15,7 +15,11 @@
 <body>
     <div class="container" id="cv">
         <div class="side">
-            <div class="me">                
+            <div class="me">
+                <div class="portrait">
+                    <img src="https://lh3.googleusercontent.com/a-/AAuE7mD4ErnA4NT8Tqvz2GO0LhrEZH8U13wRp5EqXvllQg=s96static/image/wechat.png" alt="">
+                </div>
+                
                 <h1 id="username" >张明睿</h1>
                 <h4 id="persona-tag" >计算机视觉 / 脑机接口 / 机器学习</h4>
             </div>
