--- a/resume/index.html
+++ b/resume/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>张明睿</title>
     <link rel="stylesheet" href="static/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.min.js"></script>
@@ -77,10 +76,10 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">数学</label><span class="label-value">高等数学上95,高等数学下93,高等解题方法94,概率论与数理统计90</span></li>
+                        <label class="left-label">数学</label><span class="label-value">高等数学上95,高等数学下93,高等解题方法94,概率论与数理统计90,图论及其应用(研究生)90</span></li>
                     </li>
                     <li>
-                        <label class="left-label">英语</label><span class="label-value">大学英语90，GMIC翻译志愿者</span></li>
+                        <label class="left-label">英语</label><span class="label-value">大学英语90，2017国际移动互联网大会翻译志愿者</span></li>
                     </li>
                     <li>
                         <label class="left-label">算法</label><span class="label-value">数据结构93,算法设计90,面向对象设计98</span></li>
@@ -107,7 +106,7 @@
                         </h3>
                     </li>
                     <li>
-                      <h3>综合排名：<b>5/329</b>（大一专业排名）<b>6/315</b>（大二专业排名）</h3>
+                      <h3>学业成绩：<b>5/329</b>（大一专业排名）<b>6/315</b>（大二专业排名）</h3>
                     </li>
                     <li>
                       <h3>英语水平：CET-4: <b>614</b>、CET-6: <b>588</b>、<b>NECCS First Prize</b></h3>
@@ -125,7 +124,7 @@
                         <h3>北京移动企业奖学金(<b>TOP 1.5%</b>)<p>校级优秀班级干部<p>全国大学生英语竞赛一等奖</h3>
                     </li>
                     <li>
-                        <h3>一等奖学金(<b>TOP 1.9%</b>)<p>校级三好学生<p>美国大学生数学建模竞赛S奖<p>“互联网+” 全国大学生创新创业大赛优秀奖(大数据预警系统)</h3>
+                        <h3>一等奖学金(<b>TOP 1.9%</b>)<p>校级三好学生<p>美国大学生数学建模竞赛SP奖<p>“互联网+” 全国大学生创新创业大赛优秀奖(大数据预警系统)</h3>
                     </li>
 
                 </ul class="experience-list">
@@ -136,27 +135,27 @@
                 <ul class="experience-list">
                     <li>
                         <h3>基于脉冲神经网络的手绘图片检索分类 </h3>
-                        <h4>北京大学数字视频编解码技术国家工程实验室</h4>
+                        <h4>北京大学数字视频编解码技术国家工程实验室(2019.02-2019.06)</h4>
                         <p>
                           * 对手绘数据集进行网络架构、学习方法、编码模型等方向的实验；
                         </p>
                         <p>
-                          * 设计高精度轻量SNN并完成对手绘图像的检索分类，独立完成论文：《Sketch-based Image Retrieval using Spiking Neural Networks (SBIRSNN)》
+                          * 设计高精度轻量SNN并完成对手绘图像的检索分类，独立完成论文：<br>  《Sketch-based Image Retrieval using Spiking Neural Networks (SBIRSNN)》
                         </p>
                     </li>
                     <li>
                         <h3>RSNA肺炎检测</h3>
-                          <h4>Kaggle</h4>
+                          <h4>Kaggle(2018.10-2018.11)</h4>
                         <p>
-                          * 学习 Mask RCNN、RetinaNet 等目标检测模型并对网络训练调优
+                          * 利用RetinaNet、Mask RCNN等目标检测模型自动检测胸片的肺部不透明区位
                         </p>
                         <p>
-                          * 准确率达到public score 铜牌区
+                          * 检测准确率达到public score 铜牌区
                         </p>
                     </li>
                     <li>
                         <h3>基于脉冲神经网络的心率预测</h3>
-                        <h4>中国科学院计算机网络信息中心</h4>
+                        <h4>中国科学院计算机网络信息中心, 2018国际大学生类脑计算大赛(2018.08-2018.09)</h4>
                         <p>
                           * 了解脉冲神经网络的结构和模拟器实现原理
                         </p>
@@ -166,7 +165,7 @@
                     </li>
                     <li>
                         <h3>数字视网膜仿真</h3>
-                        <h4>北京大学数字视频编解码技术国家工程实验室</h4>
+                        <h4>北京大学数字视频编解码技术国家工程实验室(2018.11-2019.01)</h4>
                         <p>
                           * 熟悉灵长类视网膜生物结构，利用非负矩阵分解结合深度学习模型对视网膜层次结构进行模拟
                         </p>
@@ -195,7 +194,7 @@
                     </li>
                     <li>
                       <h3>
-                        社会工作：志愿时长70h；参与GDG线下，MSRA annual meeting等科技活动
+                        社会工作：志愿时长70h；参与GDG线下workshop，Microsoft AI innovate 2018等科技活动
                       </h3>
                     </li>
             </div>
