--- a/resume/index.html
+++ b/resume/index.html
@@ -134,6 +134,17 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
+                        <h3>少量数据下基于深度学习的视频分类</h3>
+                        <h4>清华大学软件学院计算机辅助设计图形学与可视化研究所(2019.07-Now)</h4>
+                        <p>
+                          * 通过将视频图像稀疏采样并进行排序池化产生的动图与生成对抗网络增强的动图混合的方式，对小样本视频动作特征泛化
+                        </p>
+                        <p>
+                          * 提升了视频分类准确率的同时在测试集上运行速度明显提高，协助完成AAAI论文一篇
+                        </p>
+
+                    </li>
+                    <li>
                         <h3>基于脉冲神经网络的手绘图片检索分类 </h3>
                         <h4>北京大学数字视频编解码技术国家工程实验室(2019.02-2019.06)</h4>
                         <p>
@@ -190,7 +201,7 @@
                         <h3>个人爱好：音乐(钢琴十级),运动(国际象棋，沙滩排球，羽毛球)，书法</h3>
                     </li>
                     <li>
-                      <h3>学生工作：组织北邮第二届人工智能论坛，作为大班学委组织学院“学霸讲堂”活动等</h3>
+                      <h3>学生工作：组织北邮第二届AI论坛，作为大班学委组织学院“学霸讲堂”等</h3>
                     </li>
                     <li>
                       <h3>
