--- a/resume/index.html
+++ b/resume/index.html
@@ -134,17 +134,6 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>少量数据下基于深度学习的视频分类</h3>
-                        <h4>清华大学软件学院计算机辅助设计图形学与可视化研究所(2019.07-Now)</h4>
-                        <p>
-                          * 通过将视频图像稀疏采样并进行排序池化产生的动图与生成对抗网络增强的动图混合的方式，对小样本视频动作特征泛化
-                        </p>
-                        <p>
-                          * 提升了视频分类准确率的同时在测试集上运行速度明显提高，协助完成AAAI论文一篇
-                        </p>
-
-                    </li>
-                    <li>
                         <h3>基于脉冲神经网络的手绘图片检索分类 </h3>
                         <h4>北京大学数字视频编解码技术国家工程实验室(2019.02-2019.06)</h4>
                         <p>
@@ -153,6 +142,17 @@
                         <p>
                           * 设计高精度轻量SNN并完成对手绘图像的检索分类，独立完成论文：<br>  《Sketch-based Image Retrieval using Spiking Neural Networks (SBIRSNN)》
                         </p>
+                    </li>
+                    <li>
+                        <h3>少量数据下基于深度学习的视频分类</h3>
+                        <h4>清华大学软件学院计算机辅助设计图形学与可视化研究所(2019.07-2019.09)</h4>
+                        <p>
+                          * 通过将视频图像稀疏采样并进行排序池化产生的动图与生成对抗网络增强的动图混合的方式，对小样本视频动作特征泛化
+                        </p>
+                        <p>
+                          * 提升了视频分类准确率的同时在测试集上运行速度明显提高，协助完成AAAI论文一篇
+                        </p>
+
                     </li>
                     <li>
                         <h3>RSNA肺炎检测</h3>
