--- a/resume/index.html
+++ b/resume/index.html
@@ -106,7 +106,7 @@
                         </h3>
                     </li>
                     <li>
-                      <h3>学业成绩：<b>5/329</b>（大一专业排名）<b>6/315</b>（大二专业排名）</h3>
+                      <h3>专业成绩：<b>6/321</b>（前三学年专业排名，<B>TOP 1.87%</B>）
                     </li>
                     <li>
                       <h3>英语水平：CET-4: <b>614</b>、CET-6: <b>588</b>、<b>NECCS First Prize</b></h3>
