--- a/resume/index.html
+++ b/resume/index.html
@@ -201,7 +201,7 @@
                         <h3>个人爱好：音乐(钢琴十级),运动(国际象棋，沙滩排球，羽毛球)，书法</h3>
                     </li>
                     <li>
-                      <h3>学生工作：组织北邮第二届AI论坛，作为大班学委组织学院“学霸讲堂”等</h3>
+                      <h3>学生工作：组织北邮第二届AI论坛，作为大班学委组织学院学霸讲堂</h3>
                     </li>
                     <li>
                       <h3>
