--- a/resume/index.html
+++ b/resume/index.html
@@ -135,7 +135,7 @@
                 <ul class="experience-list">
                     <li>
                         <h3>基于脉冲神经网络的手绘图片检索分类 </h3>
-                        <h4>北京大学数字视频编解码技术国家工程实验室(2019.02-2019.06)</h4>
+                        <h4>北京邮电大学计算机学院CAD中心(2018.09-至今)</h4>
                         <p>
                           * 对手绘数据集进行网络架构、学习方法、编码模型等方向的实验；
                         </p>
@@ -155,8 +155,8 @@
 
                     </li>
                     <li>
-                        <h3>RSNA肺炎检测</h3>
-                          <h4>Kaggle(2018.10-2018.11)</h4>
+                        <h3>Kaggle-RSNA肺炎检测</h3>
+                          <h4>北京邮电大学计算机学院CAD中心(2018.10-2018.11)</h4>
                         <p>
                           * 利用RetinaNet、Mask RCNN等目标检测模型自动检测胸片的肺部不透明区位
                         </p>
