--- a/resume/index.html
+++ b/resume/index.html
@@ -145,7 +145,7 @@
                     </li>
                     <li>
                         <h3>少量数据下基于深度学习的视频分类</h3>
-                        <h4>清华大学软件学院计算机辅助设计图形学与可视化研究所(2019.07-2019.09)</h4>
+                        <h4>清华大学计算机辅助设计图形学与可视化研究所(2019.07-2019.09)</h4>
                         <p>
                           * 通过将视频图像稀疏采样并进行排序池化产生的动图与生成对抗网络增强的动图混合的方式，对小样本视频动作特征泛化
                         </p>
@@ -187,9 +187,7 @@
                     <li>
                         <h3>“人工智能与大数据”暑期学校项目</h3>
                         <h4>Sidney Sussex College, Cambridge University(剑桥大学悉尼·苏塞克斯学院)</h4>
-                        <p>* 参加“认知科学与人工智能”、“Facebook用户个性分析”等课程；</p>
-                        <p>* 调研了NHS最新AI诊疗系统, 医疗影像发展应用等；</p>
-                        <p>* 进行关于”AI在医疗诊疗领域应用”的主题演讲答辩。</p>
+                        <p>* 进行关于”AI在医疗诊疗领域应用”的主题演讲答辩；参加“认知科学与人工智能”，“Facebook用户个性分析”等课程，调研NHS最新AI诊疗系统, 医疗影像发展应用等</p>
                     </li>
                 </ul>
             </div>
