--- a/resume/index.html
+++ b/resume/index.html
@@ -187,7 +187,9 @@
                     <li>
                         <h3>“人工智能与大数据”暑期学校项目</h3>
                         <h4>Sidney Sussex College, Cambridge University(剑桥大学悉尼·苏塞克斯学院)</h4>
-                        <p>* 进行关于”AI在医疗诊疗领域应用”的主题演讲答辩；参加“认知科学与人工智能”，“Facebook用户个性分析”等课程，调研NHS最新AI诊疗系统, 医疗影像发展应用等</p>
+                        <p>* 参加“认知科学与人工智能”、“Facebook用户个性分析”等课程；</p>
+                        <p>* 调研了NHS最新AI诊疗系统, 医疗影像发展应用等；</p>
+                        <p>* 进行关于”AI在医疗诊疗领域应用”的主题演讲答辩。</p>
                     </li>
                 </ul>
             </div>
