--- a/resume/index.html
+++ b/resume/index.html
@@ -19,7 +19,7 @@
                   <img src="static/image/portrait.png" alt="">
                 </div>
                 <h1 id="username" >张明睿</h1>
-                <h4 id="persona-tag" >计算机视觉 / 脑机接口 / 机器学习</h4>
+                <h4 id="persona-tag" >计算机视觉 / 类脑视觉 / 机器学习</h4>
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
@@ -102,11 +102,13 @@
                 <ul class="experience-list">
                     <li>
                         <h3>
-                          <b>北京邮电大学 计算机学院 计算机科学与技术 实验班</b>
+                          <b>北京邮电大学 计算机学院 计科实验班</b>(预录取到清华大学软件学院)
                         </h3>
                     </li>
                     <li>
-                      <h3>专业成绩：<b>6/321</b>（前三学年专业排名，<B>TOP 1.87%</B>）
+                      <h3>学业成绩：<b>89.38</b>（BUPT, 2016.9-2019.8 ,<B>6/321</B>）
+                      <p>&nbsp;&nbsp;&nbsp;&ensp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <b>89.8</b> (Cambridge U, 2018.7-2018.8)
                     </li>
                     <li>
                       <h3>英语水平：CET-4: <b>614</b>、CET-6: <b>588</b>、<b>NECCS First Prize</b></h3>
@@ -124,7 +126,7 @@
                         <h3>北京移动企业奖学金(<b>TOP 1.5%</b>)<p>校级优秀班级干部<p>全国大学生英语竞赛一等奖</h3>
                     </li>
                     <li>
-                        <h3>一等奖学金(<b>TOP 1.9%</b>)<p>校级三好学生<p>美国大学生数学建模竞赛SP奖<p>“互联网+” 全国大学生创新创业大赛优秀奖(大数据预警系统)</h3>
+                        <h3>一等奖学金(<b>TOP 1.9%</b>)<p>校级三好学生<p>美国大学生数学建模竞赛SP奖<p>“互联网+” 全国大学生创新创业大赛优秀奖</h3>
                     </li>
 
                 </ul class="experience-list">
@@ -150,19 +152,17 @@
                           * 通过将视频图像稀疏采样并进行排序池化产生的动图与生成对抗网络增强的动图混合的方式，对小样本视频动作特征泛化
                         </p>
                         <p>
-                          * 提升了视频分类准确率的同时在测试集上运行速度明显提高，协助完成AAAI论文一篇
+                          * 提升了视频分类准确率的同时在测试集上运行速度明显提高，协助完成CVPR论文一篇在投
                         </p>
 
                     </li>
                     <li>
-                        <h3>Kaggle-RSNA肺炎检测</h3>
-                          <h4>北京邮电大学计算机学院CAD中心(2018.10-2018.11)</h4>
+                        <h3>关于图像美学与数字抠像的调研</h3>
+                        <h4>清华大学计算机辅助设计图形学与可视化研究所(2019.10-2019.12)</h4>
                         <p>
-                          * 利用RetinaNet、Mask RCNN等目标检测模型自动检测胸片的肺部不透明区位
+                          * 对图像美感分布预测及基于深度学习端对端的采样及传播方法抠像研究实验
                         </p>
-                        <p>
-                          * 检测准确率达到public score 铜牌区
-                        </p>
+
                     </li>
                     <li>
                         <h3>基于脉冲神经网络的心率预测</h3>
@@ -181,7 +181,7 @@
                           * 熟悉灵长类视网膜生物结构，利用非负矩阵分解结合深度学习模型对视网膜层次结构进行模拟
                         </p>
                         <p>
-                          * 阅读视觉编解码相关前沿论文，了解通过脉冲编码、无帧编码的方法对图像视频进行重构
+                          * 阅读视觉编解码相关前沿论文，了解通过脉冲编码、无帧编码的方法对图像视频重构
                         </p>
                     </li>
                     <li>
@@ -205,7 +205,7 @@
                     </li>
                     <li>
                       <h3>
-                        社会工作：志愿时长70h；参与GDG线下workshop，Microsoft AI innovate 2018等科技活动
+                        社会工作：志愿时长70h；参与GDG workshop, MSRA AI Innovate 2018等科技活动
                       </h3>
                     </li>
             </div>
