--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "Hey, this is WangPei."
+title: "Mingrui Zhang"
+description: ""
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -15,21 +15,22 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
 
-    <p>你好，我是<strong>某某</strong>，来自……。</p>
+    <p>I am currently a second-year postgraduate student at the Institute of Computer Graphics and Computer Aided Design, School of Software, <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>.
+      I received B.S. degree (Hons.) in computer science from <a href="https://www.bupt.edu.cn">Beijing University of Posts and Telecommunications</a> in 2020.
+      I was a visiting student with Sidney Sussex College, <a href="https://www.sid.cam.ac.uk">University of Cambridge</a> in 2018.
+      I was also an Image Algorithm Engineer Intern with Video Technology Team, <a href="kwai.com">Kuaishou</a>, Beijing from 2020 to 2021,
+      a 3D Reconstruction Algorithm Engineer Intern with Y-tech, <a href="kwai.com">Kuaishou</a>, Beijing from 2021 to 2022.
+    </p>
 
-    <p>介绍一下你自己。</p>
+    <p>My research interests include computer vision, image processing and computer animation.</p>
 
-    
 
-    <p></p>
-    
-    <h5>Talks</h5>
+
+    <h5>Resources</h5>
 
     <ul>
-        <li><a href="https://github.com">GitHub</a></li>
+        <li><a href="https://github.com/cohaesio">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
     </ul>
@@ -123,4 +124,3 @@ header-img: "img/post-bg-rwd.jpg"
 </script>
 <!-- disqus 公共JS代码 end -->
 {% endif %}
-
