--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Mingrui Zhang"
 description: ""
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/post-great-wall.jpg"
 ---
 
 <!-- Language Selector -->
@@ -16,7 +16,8 @@ header-img: "img/post-bg-rwd.jpg"
 
     <!--copied from markdown -->
 
-    <p>I am currently a second-year postgraduate student at the Institute of Computer Graphics and Computer Aided Design, School of Software, <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>.
+    <p>
+      I am currently a second-year postgraduate student at the Institute of Computer Graphics and Computer Aided Design, School of Software, <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>.
       I received B.S. degree (Hons.) in computer science from <a href="https://www.bupt.edu.cn">Beijing University of Posts and Telecommunications</a> in 2020.
       I was a visiting student with Sidney Sussex College, <a href="https://www.sid.cam.ac.uk">University of Cambridge</a> in 2018.
       I was also an Image Algorithm Engineer Intern with Video Technology Team, <a href="kwai.com">Kuaishou</a>, Beijing from 2020 to 2021,
