--- a/about.html
+++ b/about.html
@@ -15,11 +15,13 @@ header-img: "img/post-great-wall.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-
+    <h3>Biography</h3>
     <p>
       I am currently a second-year postgraduate student at the Institute of Computer Graphics and Computer Aided Design, School of Software, <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>.
       I received B.S. degree (Hons.) in computer science from <a href="https://www.bupt.edu.cn">Beijing University of Posts and Telecommunications</a> in 2020.
       I was a visiting student with Sidney Sussex College, <a href="https://www.sid.cam.ac.uk">University of Cambridge</a> in 2018.
+    </p>
+    <p>
       I was also an Image Algorithm Engineer Intern with Video Technology Team, <a href="kwai.com">Kuaishou</a>, Beijing from 2020 to 2021,
       a 3D Reconstruction Algorithm Engineer Intern with Y-tech, <a href="kwai.com">Kuaishou</a>, Beijing from 2021 to 2022.
     </p>
@@ -32,8 +34,8 @@ header-img: "img/post-great-wall.jpg"
 
     <ul>
         <li><a href="https://github.com/cohaesio">GitHub</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
+        <li><a href="http://linkedin.com/in/zhang-mingrui-94680b156/">LinkedIn</a></li>
+        <li><a href="https://mrjeffreymarshall.blogspot.com">Blogger</a></li>
     </ul>
 </div>
 
