--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ header-img: "img/post-great-wall.jpg"
       a 3D Reconstruction Algorithm Engineer Intern with Y-tech, <a href="kwai.com">Kuaishou</a>, Beijing from 2021 to 2023.
     </p>
 
-    <p>My research interests include computer vision, image processing and computer animation.</p>
+    <p>My research interests include computer vision, computer animation and deep learning.</p>
 
 
 
